<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Navigation bar function expansion module
  ~     Copyright (C) 2017 egguncle cicadashadow@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/space_m"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.egguncle.xposednavigationbar.ui.activity.AboutActivity">

    <TextView
        android:id="@+id/tv_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_m"
        android:text="@string/market" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_version_code"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:paddingTop="@dimen/space_m"
        android:text="@string/author" />
    <Button
        android:id="@+id/btn_alipay_donate"
        android:text="@string/alipay_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_wechat_donate"
        android:text="@string/wechat_donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
