<!--
  ~     Navigation bar function expansion module
  ~     Copyright (C) 2017 egguncle cicadashadow@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.egguncle.xposednavigationbar.ui.activity.HomeActivity">

    <item
        android:title="@string/save"
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_save"
        />
    <item
        android:id="@+id/menu_language"
        android:orderInCategory="100"
        android:title="@string/about_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_manual"
        android:orderInCategory="100"
        android:title="@string/about_manual"
        app:showAsAction="never" />
</menu>
