<?xml version="1.0" encoding="utf-8"?><!--
  ~     Navigation bar function expansion module
  ~     Copyright (C) 2017 egguncle cicadashadow@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:paddingLeft="@dimen/space_m"
    android:paddingRight="@dimen/space_m"
    tools:context="com.egguncle.xposednavigationbar.ui.activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />

            <TextView
                android:id="@+id/tv_version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_m" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center"
            android:paddingTop="@dimen/space_m"
            android:text="@string/author" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:paddingTop="@dimen/space_m"
            android:text="@string/app_github" />

        <TextView
            android:id="@+id/tv_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_m"
            android:text="@string/market" />


        <LinearLayout
            android:layout_marginBottom="@dimen/space_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/tv_alipay_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alipay_donate" />

            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/tv_wechat_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wechat_donate" />

            <TextView
                android:id="@+id/tv_paypal_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:text="@string/paypal_url" />
        </LinearLayout>


        <TextView
            android:layout_marginBottom="@dimen/space_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_open_source"
            android:autoLink="web"
            />
    </LinearLayout>
</ScrollView>
