<?xml version="1.0" encoding="utf-8"?><!--
  ~     Navigation bar function expansion module
  ~     Copyright (C) 2017 egguncle
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_m">


    <Switch
        android:textSize="@dimen/txt_m"
        android:id="@+id/sw_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/switch_app" />

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/btn_setting"-->
        <!--android:text="设置"-->
        <!--/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_m"
        android:text="@string/about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:id="@+id/btn_setting_btns"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:textSize="@dimen/txt_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_btn"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:id="@+id/btn_setting_other"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:textSize="@dimen/txt_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_other"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:id="@+id/btn_about"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:textSize="@dimen/txt_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"
        />

</LinearLayout>