<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Navigation bar function expansion module
  ~     Copyright (C) 2017 egguncle
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_m"
    android:layout_height="match_parent"
    tools:context="com.egguncle.xposednavigationbar.ui.activity.OtherSettingActivity">

    <LinearLayout
        android:id="@+id/btn_home_point"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_point"
            android:textSize="@dimen/txt_m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_home_position"
            android:textSize="@dimen/txt_m" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey" />

    <LinearLayout
        android:id="@+id/btn_clear_mem_level"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_mem_level"
            android:textSize="@dimen/txt_m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_clear_mem_level"
            android:textSize="@dimen/txt_m" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey" />
    <LinearLayout
        android:id="@+id/btn_icon_size"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon_size"
            android:textSize="@dimen/txt_m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_icon_size"
            android:textSize="@dimen/txt_m" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey" />
</LinearLayout>
